app/assets/stylesheets/dropdowns/avatar_dropdown.css
.avatar-dropdown-menu {
    position: absolute;
    top: 34px;
    right: 0;
    z-index: 10;
    background-color: white;
    border: 1px solid #e0e6e8;
    border-radius: 5px;
    min-width: 252px;
    min-height: 231px;
    /* min-height: 275px; */
    /* height: 315px; */
    box-shadow: 0 0 4px #26151B26;
    box-shadow: -1px 1px 2px #26151B26;
    box-shadow: 0 1px 4px #26151B26;
    box-shadow: 0 1px 3px 0 #151b2626;
    box-shadow: 0 0 10px #e0e6e8;
}

.avatar-dropdown-menu > section > div,
.more-options-dropdown-menu > div {
    height: 40px;
    box-sizing: border-box;
    padding: 10px;
    background-color: white;
    display: flex;
    align-items: center;
    color: #151b26;
    font-size: 13px;
    margin: 4px 0;
}

.avatar-dropdown-menu > section > div:hover,
.more-options-dropdown-menu > div:hover {
    background-color: #edf1f2;
    cursor: pointer;
}

.avatar-dropdown-menu > section > div > a {
    text-decoration: none;
    color: #151b26;
    padding-left: 5px;
}

.avatar-dropdown-menu > section {
    border-bottom: 1px solid #e0e6e8;
}

.avatar-dropdown-menu > section:last-of-type {
    border-bottom: none;
}

.avatar-dropdown-menu-hidden,
.more-options-dropdown-menu-hidden {
    display: none;
}

.avatar-dropdown-menu > section > div > i {
    margin-right: 9px;
}

/* MORE OPTIONS DROPDOWN MENU */
.more-options-dropdown-parent {
    position: relative;
}

.more-options-dropdown-menu {
    position: absolute;
    top: -5px;
    left: -224px;
    z-index: 10;
    background-color: white;
    border: 1px solid #e0e6e8;
    border-radius: 5px;
    width: 222px;
    height: 92px;
}

